--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "pinia-plugin-persist": "^1.0.0",
     "qrcode": "^1.5.0",
     "qs": "^6.10.3",
+    "url": "^0.11.0",
     "vue": "3.2.33",
     "vue-i18n": "9.1.9",
     "vue-router": "^4.0.14",
